Improve footer, add vite

--- a/header.html
+++ b/header.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Company — Home</title>
     <link rel="stylesheet" href="header_styles.css">
+    <link rel="stylesheet" href="footer_styles.css">
+    <link rel="stylesheet" href="main_styles.css">
 </head>
 <body class="light-header">
 
@@ -22,7 +24,7 @@
             </nav>
 
             <details class="burger">
-                <summary class="burger-trigger" aria-haspopup="true" aria-label="Відкрити мобільне меню">
+                <summary class="burger-trigger" aria-haspopup="true" aria-label="Відкрити меню">
                     <span class="bar"></span>
                     <span class="bar short"></span>
                     <span class="bar"></span>
@@ -42,4 +44,49 @@
         </div>
     </div>
 </header>
+<main>
+    <h2>Header</h2>
+    <h2>Header</h2>
+    <h2>Header</h2>
+    <h2>Header</h2>
+    <h2>Header</h2>
+    <h2>Header</h2>
+    <h2>Header</h2>
+    <h2>Header</h2>
+    <h2>Header</h2>
+    <h2>Header</h2>
+    <h2>Header</h2>
+    <h2>Header</h2>
+</main>
+<footer>
+    <div class="footer-container">
+        <div class="footer-info">
+            <p>Riyadh, KSA</p>
+            <p>3113 Mohammed lbn Abdulaziz Rd.</p>
+            <p>Motoon Commercial Towers, North Tower</p>
+            <p>4th Floor, Riyadh 12212, KSA</p>
+            <p>+966 9200 07122</p>
+            <p>info@motoon.com.sa</p>
+        </div>
 
+        <div class="footer-social">
+            <div class="social-icons">
+                <a href="#"><img src="public/images/instagram_icon.svg" alt="Instagram"></a>
+                <a href="#"><img src="public/images/facebook_icon.svg" alt="Facebook"></a>
+                <a href="#" class="smaller-icon"><img src="public/images/x_icon.png.svg" alt="X"></a>
+                <a href="#"><img src="public/images/linkedin_icon.svg" alt="Linkedin"></a>
+                <a href="#"><img src="public/images/youtube_icon.svg" alt="Youtube"></a>
+                <a href="#" class="smaller-icon"><img src="public/images/whatsup_icon.png.svg" alt="WhatsUp"></a>
+            </div>
+            <div class="copyright">
+                <p>© 2024 Motoon Development. All rights reserved.</p>
+            </div>
+        </div>
+
+        <div class="footer-logo">
+            <img src="public/images/logo_white_big.png.svg" alt="Company Logo">
+        </div>
+    </div>
+</footer>
+
+</body>
